css/style.css
:root {
    /* I'll just steal gruvbox (technically it isn't stealing since it's under MIT). I will make sure to give
     * credit somewhere on the page */

    --gruvbox-dark0:       #282828;
    --gruvbox-dark1:       #3c3836;
    --gruvbox-dark2:       #504945;

    --gruvbox-light0_soft: #f2e5bc;
    --gruvbox-light1:      #ebdbb2;
    --gruvbox-light2:      #d5c4a1;
    --gruvbox-light3:      #bdae93;

    --gruvbox-bright_green: #b8bb26;
    --gruvbox-neutral_blue: #458588;

    --background-color1:    var(--gruvbox-dark0);
    --background-color2:    var(--gruvbox-dark1);
    --background-color3:    var(--gruvbox-dark2);
    --top-nav-color:        var(--gruvbox-bright_green);
    --text-on-bg-color0:    var(--gruvbox-light0_soft);
    --text-on-bg-color1:    var(--gruvbox-light1);
    --text-on-bg-color2:    var(--gruvbox-light2);
    --text-on-bg-color3:    var(--gruvbox-light3);

    --image-border-color:    var(--gruvbox-light3);
    --image-container-color: var(--gruvbox-light2);

    --nav-menu-color: var(--gruvbox-neutral_blue);

    --common-shadow-color: var(--gruvbox-dark2);
}

body {
    margin: 0px;

    background-color: var(--background-color1);
}

article.common-article {
    color: var(--text-on-bg-color0);
    font-family: sans-serif;
}

/* article.common-article h3 { */
article.common-article h3 {
    text-align: center;
    margin: 0;
    padding: 0;
}

article.common-article p {
    padding: 0 2rem 0 2rem;
    margin-top: 0.5rem;
}

section.common-section {
    color: var(--text-on-bg-color0);
    font-family: sans-serif;
}

section.common-section h3 {
    text-align: center;
    margin: 0;
    padding: 0;
}
.common-box-shadow {
    box-shadow: 1px 2px 4px var(--common-shadow-color);
}

.stop-scroll {
    overflow: hidden;
}

/* Navigation menu is used for hamburger menu on mobile and eventual desktop menus */
.navigation-menu {
    background-color: var(--nav-menu-color);
}

.navigation-menu section {
    background-color: var(--background-color2);
    color: var(--text-on-bg-color0);

    font-family: sans-serif;

    padding: 1rem;
    margin: 1rem;
}

.navigation-menu section h2 {
    padding-bottom: 3px;
    border-bottom: 3px solid;
    margin: 0.5rem 0 0.5rem 0;
}

.navigation-menu section a {
    display: block;

    text-decoration: none;
    color: var(--text-on-bg-color1);
    margin: 0.5rem 0 0.5rem 0;

    padding: 8px;
    border: 2px solid;
    border-radius: 6px;
}

/* Mobile content common for all pages */
@media screen and (max-width: 767px) {
    /* Top header ------------------------ */
    nav#top-nav-mobile {
        position:fixed;

        background-color: var(--top-nav-color);
        width: 100%;
        height: 10%;

        display: grid;
        grid-template-columns: 20% auto 20%;
    }

    nav#top-nav-mobile #hamburger-menu-button {
        padding-left: 1rem;
        padding-top: 0.8rem;
    }

    nav#top-nav-mobile a {
        display: flex;
        justify-content: center;
        align-items: center;

        text-decoration: none;
        color: black;
        font-size: 2em;
        font-weight: 600;
    }

    nav#top-nav-desktop {
        display: none;
    }

    div.fade-layer {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 5;
        display: none;

        background-color: rgba(0, 0, 0, 0.5);
    }

    div.fade-layer.show {
        display: block;
    }

    header.common-header {
        text-align: center;
        font-family: sans-serif;
    }

    header.common-header h1 {
        padding: 0;
        margin: 0;
        margin-bottom: 5px;

        font-size: 2rem;

        color: var(--text-on-bg-color0);
    }

    header.common-header h2 {
        padding: 0;
        margin: 0;

        font-size: 1.5rem;

        color: var(--text-on-bg-color2);
    }

    img#hamburger-menu-button {

    }

    nav#mobile-hamburger-menu {
        position: fixed;
        left: -85%;
        z-index: 10;
        transition-property: left;
        transition-duration: 0.6s;

        height: 100vh;
        width: 80vw;

    }

    /* Activated with javascript */
    nav#mobile-hamburger-menu.show {
        left: 0;
        transition-property: left;
        transition-duration: 0.6s;
    }
}

/* Desktop content common to all pages */
@media screen and (min-width: 1024px) {
    nav#mobile-hamburger-menu {
        display: none;
    }

    header.common-header {
        font-family: sans-serif;
        text-align: center;
    }

    header.common-header h1 {
        padding: 0px;
        margin: 0;
        margin-top: 1rem;
        margin-bottom: 5px;

        font-size: 3rem;

        color: var(--text-on-bg-color0);
    }

    header.common-header h2 {
        padding: 0;
        margin: 0;

        font-size: 2rem;
        color: var(--text-on-bg-color2);
    }

    .larger-text {
        font-size: 200%;
    }

    /* För närvarande inte använd */
    .rounded-corners {
        border-radius: 6px;
    }
}

/* First page ------------------------ */

div#wrapper-front-first-page article {
    grid-area: ar;
}

div#wrapper-front-first-page section {
    grid-area: se;
}

div#wrapper-front-first-page section ul {
    margin-top: 0.5rem;
    list-style-type: none;
}

div#wrapper-front-first-page header {
    grid-area: he;
}

/* Mobile */
@media screen and (max-width: 767px) {
    div#wrapper-front-first-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '.  '
        'he'
        'ar'
        'se'
        '.  '
        ;

        grid-template-rows: 10% 15% 30% 30% 15%;

        gap: 1em;
    }

    .rounded-corners {
        border-radius: 6px;
    }
}
/* ... */

